# Email-Employee

./: .env.example  Agent.md  CLAUDE.md  README.md  docker-compose.yml  main.py
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile.agent-service  Dockerfile.email-monitor  Dockerfile.workspace-mcp  email_monitor.py  pyproject.toml
backend/agent_service/: agent.py  auth_client.py  crypto.py  gmail_mcp.py  main.py  models.py  notify.py  oauth_config.py  storage.py
backend/agent_service/routers/: lifecycle.py  oauth.py
backend/db/: models.py  repository.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_initial_emails.py  0002_google_tokens.py
backend/notify_service/: whatsapp_mcp.py
backend/scripts/: check_state.py  check_tokens.py  probe_from.py  probe_identity.py  probe_missing.py  probe_notify.py  probe_schema.py  probe_search.py  probe_subject.py  probe_users.py  probe_where.py  run_workspace_mcp.sh  watch_once.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  node_modules  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  EventCard.tsx  RejectModal.tsx  SignIn.tsx
frontend/src/context/: AuthContext.tsx  EventContext.tsx
frontend/src/pages/: Approval.tsx  Done.tsx  Inbox.tsx
